server: add csrf protection to auth endpoints as well, as recommended by OWASP